Changes between 2.2.4 and 2.2.5.dev
-----------------------------------

- always report installed 3rd party plugins
- fix issue160: a failing setup of an xfail-marked tests should
  be reported as xfail (not xpass)
- fix issue128: show captured output when capsys/capfd are used
- pluginmanager.register(...) now raises ValueError if the
  plugin has been already registered or the name is taken
- fix issue159: improve http://pytest.org/latest/faq.html 
  especially with respect to the "magic" history, also mention
  pytest-django, trial and unittest integration.
- reporting refinements:
  - pytest_report_header now receives a "startdir" so that
    you can use startdir.bestrelpath(yourpath) to show
    nice relative path
  - allow plugins to implement both pytest_report_header and 
    pytest_sessionstart (sessionstart is invoked first).
  - don't show deselected reason line if there is none

Changes between 2.2.3 and 2.2.4
-----------------------------------

- fix error message for rewritten assertions involving the % operator
- fix issue 126: correctly match all invalid xml characters for junitxml
  binary escape
- fix issue with unittest: now @unittest.expectedFailure markers should
  be processed correctly (you can also use @pytest.mark markers)
- document integration with the extended distribute/setuptools test commands
- fix issue 140: propperly get the real functions
  of bound classmethods for setup/teardown_class
- fix issue #141: switch from the deceased paste.pocoo.org to bpaste.net
- fix issue #143: call unconfigure/sessionfinish always when
  configure/sessionstart where called
- fix issue #144: better mangle test ids to junitxml classnames
- upgrade distribute_setup.py to 0.6.27

Changes between 2.2.2 and 2.2.3
----------------------------------------

- fix uploaded package to only include neccesary files

Changes between 2.2.1 and 2.2.2
----------------------------------------

- fix issue101: wrong args to unittest.TestCase test function now