@@ -1,21 +1,33 @@
 Changes between 2.2.4 and 2.2.5.dev
 -----------------------------------
 
+- fix xfail/skip confusion: a skip-mark or an imperative pytest.skip
+  will now take precedence before xfail-markers because we
+  can't determine xfail/xpass status in case of a skip. see also:
+  http://stackoverflow.com/questions/11105828/in-py-test-when-i-explicitly-skip-a-test-that-is-marked-as-xfail-how-can-i-get
+
 - always report installed 3rd party plugins
+
 - fix issue160: a failing setup of an xfail-marked tests should
   be reported as xfail (not xpass)
+
 - fix issue128: show captured output when capsys/capfd are used
+
 - pluginmanager.register(...) now raises ValueError if the
   plugin has been already registered or the name is taken
+
 - fix issue159: improve http://pytest.org/latest/faq.html 
   especially with respect to the "magic" history, also mention
   pytest-django, trial and unittest integration.
+
 - reporting refinements:
   - pytest_report_header now receives a "startdir" so that
     you can use startdir.bestrelpath(yourpath) to show
     nice relative path
+
   - allow plugins to implement both pytest_report_header and 
     pytest_sessionstart (sessionstart is invoked first).
+
   - don't show deselected reason line if there is none
 
 Changes between 2.2.3 and 2.2.4
